<resources>
    <string name="welcomeText">Welcome to Android App Development</string>
    <string name="androidLogoText">Android logo</string>
    <string name="smileBeeText">Smile bee</string>
    <string name="my_msg">어서 들어와</string>
    <!-- 실습3,4 -->
    <!--string name="app_name">시 목록1</string>
    <string name="title02">가지 않은 길</string>
    <string name="author02">로버트 프로스트</string>
    <string name="body02">
        단풍 든 숲 속에 두 갈래 길이 있습니다.
        한 몸이 두 길을 가지 못하기에
        탄식하며 한참을 서서
        낮은 수풀로 꺾여 내려가는 길을
        멀리 바라보았습니다.
    </string-->
    <string name="title01">별 헤는 밤</string>
    <string name="author01">윤동주</string>
    <string name="body01">
        계절이 지나가는 가을은
        가을도 가득 차 있습니다.
        나는 아무 걱정도 없이
        가을 속의 별들을 다 헤일듯 합니다.
    </string>

    <!-- 실습 5-->
    <string name="app_name">시</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title02">가지 않은 길</string>
    <string name="author02">로버트 프로스트</string>
    <string name="body02">
    노란 숲 속 두 갈래로 길이 나 있었습니다.\n
    두 길 다 가보지 못하는 것이 안타까워,\n
    한동안 나그네로 서서\n
    한쪽 깊이 굽어 꺾여 내려한 곳으로\n
    눈이 닿는 데까지 멀리 바라보았습니다.\n\n
    그러고는 똑같이 아름다운 쪽 길을 택했습니다.\n
    이 길은 풀이 더 우거지고 발자취도 적어,\n
    누군가 더 걸어가야 할 길처럼 보였기 때문입니다.\n
    누군가 이 길을 걷는다면,\n
    다른 쪽 길과 거의 같아질 것이지만요.\n\n
    그 날 아침 두 갈래 길에는 똑같이\n
    밟은 흔적이 없는 낙엽이 쌓여 있었습니다.\n
    아, 나는 다음 날을 위하여 한쪽 길을 남겨두었습니다.\n
    하지만 길은 길로 이어지는 것이어서\n
    다시 돌아올 수는 없는 법.\n\n
    먼 훗날 어디에선가\n
    나는 한숨을 쉬며 말할 것입니다.\n
    숲 속에 두 갈래 길이 있었는데,\n
    나는 사람이 적게 간 길을 택했노라고,\n
    그래서 모든 것이 달라졌다고.
    </string>
    <string name="status_string">Status</string>
    <string name="button_string">Press Me</string>
    <string name="status1_string">Touch One Status</string>
    <string name="status2_string">Touch Two Status</string>
</resources>
