<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp ">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/shape_list">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title01"
            android:textColor="#61380B"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@drawable/shape_title"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author01"
            android:textColor="#22741C"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/textbody1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/body01"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:textSize="15sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/shape_list">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title02"
            android:textColor="#61380B"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@drawable/shape_title"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author02"
            android:textColor="#22741C"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/textbody2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/body02"
            android:singleLine="true"
            android:ellipsize="end"
            android:textSize="15sp"/>
    </LinearLayout>
</LinearLayout>